<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <item
            android:id="@+id/lastOrderFragment"
            android:icon="@drawable/orders"
            android:title="@string/LastOrder"/>
        <item
            android:id="@+id/locationFragment"
            android:icon="@drawable/location_on"
            android:title="@string/StoreLocation"/>
        <item
            android:id="@+id/Language"
            android:icon="@drawable/language"
            android:title="@string/Language"/>
    <item
        android:id="@+id/Notification"
        android:icon="@drawable/notifications"
        android:title="@string/Notification"/>
    <item
        android:id="@+id/Logout"
        android:icon="@drawable/logout"
        android:title="@string/Logout"/>
</menu>