<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_8"
    android:layout_marginTop="@dimen/margin_8"
    android:layout_marginEnd="@dimen/margin_16"
    android:layout_marginStart="@dimen/margin_16"
    app:cardCornerRadius="@dimen/margin_16"
    app:cardElevation="@dimen/margin_8"
    android:background="@drawable/card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgSaleProduct"
            android:layout_width="@dimen/height_75"
            android:layout_height="@dimen/height_75"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/init_img" />

        <TextView
            android:id="@+id/tvSalesProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/productName"
            app:layout_constraintStart_toEndOf="@+id/imgSaleProduct"
            app:layout_constraintTop_toTopOf="@+id/imgSaleProduct" />

        <TextView
            android:id="@+id/tvProductCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/category"
            app:layout_constraintStart_toStartOf="@+id/tvSalesProductName"
            app:layout_constraintTop_toBottomOf="@+id/tvSalesProductName" />

        <TextView
            android:id="@+id/tvProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="@+id/tvProductCategory"
            app:layout_constraintTop_toBottomOf="@+id/tvProductCategory" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgSaleProduct" />

        <TextView
            android:id="@+id/tvDiscountType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/discount_type"
            style="@style/TitleColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tiDiscountType"
            app:layout_constraintStart_toStartOf="@+id/tiDiscountType"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiDiscountType"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin_8"
            android:hint="@string/discountType"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/tiSaleDiscount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDiscountType">

            <com.trueandtrust.shoplex.model.extra.TextInputDropDownMenu
                android:id="@+id/actDiscountType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvSalesDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount"
            style="@style/TitleColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvDiscountType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvDiscountType" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiSaleDiscount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/width_72"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            app:helperText="@string/discountRange"
            app:layout_constraintEnd_toEndOf="@+id/tvSalesDiscount"
            app:layout_constraintStart_toStartOf="@+id/tvSalesDiscount"
            app:layout_constraintTop_toBottomOf="@+id/tvSalesDiscount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edSaleDiscount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/value"
                android:inputType="number"
                android:maxLength="2" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvCurrentPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            style="@style/TitleColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvSalesDiscount"
            app:layout_constraintEnd_toEndOf="@+id/tvSalesPrice"
            app:layout_constraintStart_toStartOf="@+id/tvSalesPrice"
            app:layout_constraintTop_toTopOf="@+id/tvSalesDiscount" />


        <TextView
            android:id="@+id/tvSalesPrice"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_50"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:padding="@dimen/padding_4"
            android:layout_marginStart="@dimen/margin_8"
            android:text="@string/price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tiSaleDiscount"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentPrice" />

        <Button
            android:id="@+id/btnConfirmSales"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="@dimen/margin_8"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiDiscountType" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>