<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_8">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardImgChatHead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/height_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgChatHead"
            android:layout_width="@dimen/width_75"
            android:layout_height="@dimen/width_75"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvUserNameChatHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/user_name"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/cardImgChatHead"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvProductNameChatHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/product"
        app:layout_constraintStart_toStartOf="@+id/tvUserNameChatHead"
        app:layout_constraintTop_toBottomOf="@+id/tvUserNameChatHead" />

    <TextView
        android:id="@+id/tvNumOfMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8"
        android:background="@drawable/solidbutton"
        android:paddingLeft="@dimen/padding_6"
        android:paddingRight="@dimen/padding_6"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tvUserNameChatHead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvUserNameChatHead"
        tools:text="2" />

    <TextView
        android:id="@+id/tvPriceChatHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8"
        android:text="@string/price"
        app:layout_constraintBottom_toBottomOf="@+id/tvProductNameChatHead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvProductNameChatHead" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_84"
        android:layout_marginTop="@dimen/padding_4"
        android:layout_marginBottom="@dimen/padding_4"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvProductNameChatHead"
        app:layout_constraintTop_toBottomOf="@+id/cardImgChatHead" />

</androidx.constraintlayout.widget.ConstraintLayout>